--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta lang="de" charset="utf-8">
-
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
         <header><h1>The header</h1></header>
