--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta lang="de" charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/app.css">
+        <title>Portfolio Page</title>
     </head>
     <body>
         <div class="container">
-            <header><img src="img/logo_100x100.png" alt="Burning Glass Logo"><h1>The header</h1></header>
-            <nav><ul><li>Nav1</li><li>Nav2</li><li>Nav3</li><li>Nav4</li></ul></nav>
-            <section><article><h2>Article Header</h2><div class="teaser">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.<span class="continue">More ...</span></div></article></section>
+            <header><img class="logo" src="img/logo_100x100.png" alt="Burning Glass Logo"><h1>The header</h1></header>
+            <nav><ul><li class="main_nav">Nav1</li><li  class="main_nav">Nav2</li><li  class="main_nav">Nav3</li><li>Nav4</li></ul></nav>
+            <section><h2>Section header</h2><article><h3>Article Header</h3><div class="teaser">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.<span class="continue">More ...</span></div></article></section>
             <footer>The footer</footer>
         </div>
     </body>
