Add images in section

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <div class="container">
             <header>
                 <h1>The header</h1>
-                <img class="logo" src="img/logo_100x100.png" alt="Burning Glass Logo">
+                <img class="logo clearfix" src="img/logo_100x100.png" alt="Burning Glass Logo">
             </header>
-            <nav>
+            <aside>
                 <ul>
                     <li class="main_nav">Nav1</li>
                     <li class="main_nav">Nav2</li>
                     <li class="main_nav">Nav3</li>
                     <li class="main_nav">Nav4</li>
                 </ul>
-            </nav>
+            </aside>
             <section>
                 <h2>Section header</h2>
                 <article>
@@ -28,6 +28,15 @@
                         <span class="continue">More ...</span>
                     </div>
                 </article>
+                <div>
+                    <img src="img/IMG_5035_100x76.png" alt="">
+                </div>
+                <div>
+                    <img src="img/IMG_5036_100x67.png" alt="">
+                </div>
+                <div>
+                    <img src="img/IMG_5037_100x67.png" alt="">
+                </div>
             </section>
             <footer>The footer</footer>
         </div>
