--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div class="container">
             <header>
-                <h1>The header</h1>
-                <img class="logo clearfix" src="img/logo_100x100.png" alt="Burning Glass Logo">
+                <h1>Portfolio Page</h1>
+                <img class="logo clearfix" src="img/logo_250x85.png" alt="Burning Glass Logo" srcset="img/logo_125x43.png 449w, img/logo_250x85.png 769w">
             </header>
             <aside>
                 <ul>
@@ -28,14 +28,16 @@
                         <span class="continue">More ...</span>
                     </div>
                 </article>
-                <div>
-                    <img src="img/IMG_5035_100x76.png" alt="">
-                </div>
-                <div>
-                    <img src="img/IMG_5036_100x67.png" alt="">
-                </div>
-                <div>
-                    <img src="img/IMG_5037_100x67.png" alt="">
+                <div class="project_links">
+                    <div>
+                        <img src="img/IMG_5035_100x76.png" alt="">
+                    </div>
+                    <div>
+                        <img src="img/IMG_5036_100x67.png" alt="">
+                    </div>
+                    <div>
+                        <img src="img/IMG_5037_100x67.png" alt="">
+                    </div>
                 </div>
             </section>
             <footer>The footer</footer>
