Add styling and links for secondary navigation

--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
                         <span class="continue">More ...</span>
                     </div>
                 </article>
-                <div class="project_links">
-                    <div>
-                        <img src="img/IMG_5035_100x76.png" alt="">
-                    </div>
-                    <div>
-                        <img src="img/IMG_5036_100x67.png" alt="">
-                    </div>
-                    <div>
-                        <img src="img/IMG_5037_100x67.png" alt="">
-                    </div>
-                </div>
+                <ul class="secondary_nav">
+                    <li>
+                        <a href="http://18.194.127.232" target="_blank">
+                            <img src="img/pro_one_100x68.png" alt="link to catalog app">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/capt-marwil" target="_blank">
+                            <img src="img/IMG_5036_100x67.png" alt="Link to my github profile">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://de.linkedin.com/in/marcuswillemsen" target="_blank">
+                            <img src="img/IMG_5037_100x67.png" alt="Link to my Linked In profile">
+                        </a>
+                    </li>
+                </ul>
             </section>
             <footer>The footer</footer>
         </div>
